# whisper-service

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  cli.cpp  fly.toml  main.cpp  transcribe.sh
